--- a/src/autosearch.css
+++ b/src/autosearch.css
@@ -1,3 +1,9 @@
 .ui-autosearch-content{background: #fff;border:1px solid #ddd;max-height: 200px;overflow: auto;}
-.ui-autosearch-content .item{overflow: hidden;text-overflow:ellipsis;  white-space: nowrap; height: 24px;line-height: 24px;box-sizing:border-box;padding-left:10px;cursor: pointer;}
+.ui-autosearch-content .item{overflow: hidden;text-overflow:ellipsis;  white-space: nowrap; height: 24px;line-height: 24px;box-sizing:border-box;padding-left:10px;}
 .ui-autosearch-content .item:hover,.ui-autosearch-content .item.current{background-color: #f2f2f2;}
+.ui-autosearch-content .item i{
+    font-style: normal;    
+    float: right;
+    padding: 0 6px;
+    cursor: pointer;
+}
